--- a/Final_Project - CataWard/contents/Flood.html
+++ b/Final_Project - CataWard/contents/Flood.html
@@ -13,29 +13,31 @@
 
 <body>
     <header>
-        <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <div class="dropdown-toggle">
-                        <label class="topics" for="dropdown-toggle">Disasters</label>
-                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
-                        <div class="dropdown-menu">
-                            <a href="Typhoon.html">Typhoon</a>
-                            <a href="Flood.html">Flood</a>
-                            <a href="Earthquake.html">Earthquake</a>
-                            <a href="Landslide.html">Landslide</a>
-                            <a href="Tsunami.html">Tsunami</a>
+        <div class="header-container">
+            <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
+            <nav>
+                <ul>
+                    <li class="dropdown">
+                        <div class="dropdown-toggle">
+                            <label class="topics" for="dropdown-toggle">Disasters</label>
+                            <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                            <div class="dropdown-menu">
+                                <a href="Typhoon.html">Typhoon</a>
+                                <a href="Flood.html">Flood</a>
+                                <a href="Earthquake.html">Earthquake</a>
+                                <a href="Landslide.html">Landslide</a>
+                                <a href="Tsunami.html">Tsunami</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <li><a href="../about.html">About Us</a></li>
-                <li><a href="../contact.html">Contacts</a></li>
-            </ul>
-        </nav>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../contact.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
+
     <section class="image-section">
         <img src="../assets/images/flood1.jpg" alt="image">
     </section>
@@ -49,7 +51,7 @@
                 walking or
                 driving through flooded regions, since they may conceal hazards. During the flood disaster, be informed by
                 following official channels for updates and directions.</p>
-            <img src="../assets/images/Flood.jpeg" alt="FloodPH">
+            <img src="../assets/images/flood.jpg" alt="FloodPH">
 
             <h2>How to Prepare for a Flood?</h2>
             <p>Consider these steps before, during, and after a Flood:</p>
@@ -80,43 +82,50 @@
                 <li>Be wary of risks such as downed electrical wires.</li>
                 <li>Contact your insurance provider and begin the cleanup process safely.</li>
             </ul>
+
+            <a href="#" class="back-to-top">↑ Back to Top</a>
         </div>
+
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Hotline Number</h3>
-                <ul>
-                    <li>Emergency Hotline - #911</li>
-                    <li>Red Cross: #143</li>
-                    <li>National Complaint Hotline: #8888 </p></li>
-                </ul>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Hotline Number</h3>
+                    <ul>
+                        <li>Emergency Hotline - #911</li>
+                        <li>Red Cross: #143</li>
+                        <li>National Complaint Hotline: #8888 </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Legal Information</h3>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About Us</a></li>
-                    <li><a href="../contact.html">Contact Us</a></li>
-                </ul>
+            
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <div class="footer-section">
-                <h3>Legal Information</h3>
-                <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Disclaimer</a></li>
-                </ul>
-            </div>
+            <p>&copy; 2024 CataWard. All rights reserved.</p>
         </div>
-        <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p>&copy; 2024 CataWard. All rights reserved.</p>
     </footer>
 
 </body>
