--- a/Final_Project - CataWard/contents/Tsunami.html
+++ b/Final_Project - CataWard/contents/Tsunami.html
@@ -7,33 +7,35 @@
     <link rel="icon" href="../assets/images/CataWard_Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
-    <link rel="stylesheet" href="../assets/styles/Tsunami.css">
+    <link rel="stylesheet" href="../assets/styles/tsunami.css">
     <title>Tsunami | CataWard</title>
 </head>
 
 <body>
     <header>
-        <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <div class="dropdown-toggle">
-                        <label class="topics" for="dropdown-toggle">Disasters</label>
-                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
-                        <div class="dropdown-menu">
-                            <a href="Typhoon.html">Typhoon</a>
-                            <a href="Flood.html">Flood</a>
-                            <a href="Earthquake.html">Earthquake</a>
-                            <a href="Landslide.html">Landslide</a>
-                            <a href="Tsunami.html">Tsunami</a>
+        <div class="header-container">
+            <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
+            <nav>
+                <ul>
+                    <li class="dropdown">
+                        <div class="dropdown-toggle">
+                            <label class="topics" for="dropdown-toggle">Disasters</label>
+                            <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                            <div class="dropdown-menu">
+                                <a href="Typhoon.html">Typhoon</a>
+                                <a href="Flood.html">Flood</a>
+                                <a href="Earthquake.html">Earthquake</a>
+                                <a href="Landslide.html">Landslide</a>
+                                <a href="Tsunami.html">Tsunami</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <li><a href="../about.html">About Us</a></li>
-                <li><a href="../contact.html">Contacts</a></li>
-            </ul>
-        </nav>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../contact.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section class="image-section">
@@ -42,7 +44,7 @@
 
     <main>
         <div class="content-container">
-            <h1>How to Survive a Tsunami</h1>
+            <h1>How to Survive a Tsunami?</h1>
             <p>A tsunami is a series of potent and perilous waves that are usually caused by earthquakes and underwater disturbances. If your home is in a place where earthquakes often occur, it's important to know what to do when a Tsunami shows up. Don't worry, We got you covered!</p>
 
             <h2>Tsunami Preparedness</h2>
@@ -86,43 +88,49 @@
                 <li>Avoid damaged buildings, roads, and bridges.</li>
                 <li>If injured, contact healthcare providers and seek shelter; call 9-1-1 for emergencies.</li>
             </ul>
+
+            <a href="#" class="back-to-top">↑ Back to Top</a>
         </div>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Hotline Number</h3>
-                <ul>
-                    <li>Emergency Hotline - #911</li>
-                    <li>Red Cross: #143</li>
-                    <li>National Complaint Hotline: #8888</li>
-                </ul>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Hotline Number</h3>
+                    <ul>
+                        <li>Emergency Hotline - #911</li>
+                        <li>Red Cross: #143</li>
+                        <li>National Complaint Hotline: #8888 </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Legal Information</h3>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About Us</a></li>
-                    <li><a href="../contact.html">Contact Us</a></li>
-                </ul>
+            
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <div class="footer-section">
-                <h3>Legal Information</h3>
-                <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Disclaimer</a></li>
-                </ul>
-            </div>
+            <p>&copy; 2024 CataWard. All rights reserved.</p>
         </div>
-        <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p>&copy; 2024 CataWard. All rights reserved.</p>
     </footer>
 
 </body>
